examples/annotated-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: mynamespace
  annotations:
    net.beta.kubernetes.io/network-policy: |
      {
        "ingress": {
          "isolation": "DefaultDeny"
        },
         "egress": {
          "isolation": "DefaultDeny"
        }
      }
